--- a/presentation/cit-world.html
+++ b/presentation/cit-world.html
@@ -14,7 +14,7 @@
 <h2>Online Merit Badge Workshop</h2>
 <footer>Citizenship in the World Merit Badge- Troop 2020</footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="2" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="2" data-marpit-pagination-total="13" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="2" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="2" data-marpit-pagination-total="14" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
 <h2>Citizenship in the World Online Merit Badge Workshop Schedule</h2>
 <ul>
 <li>March 22: Review class logistics, schedule. Review requirements and expectations. Discuss Requirements 1, 2. Discuss homework for Session 2.</li>
@@ -23,7 +23,16 @@
 </ul>
 <footer>Citizenship in the World Merit Badge- Troop 2020</footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="3" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="3" data-marpit-pagination-total="13" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="3" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="3" data-marpit-pagination-total="14" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
+<h2>Expectations</h2>
+<ul>
+<li>You must participate in discussion in order to get credit for completing requirements.</li>
+<li>A discussion on world citizenship is not a political debate, keep politics to a minimum.</li>
+<li>Complete homework prior to session 2 and 3.</li>
+</ul>
+<footer>Citizenship in the World Merit Badge- Troop 2020</footer>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="4" data-marpit-pagination-total="14" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
 <h2>Citizenship in the World Merit Badge Requirements</h2>
 <ol>
 <li>Explain what citizenship in the world means to you and what you think it takes to be a<br />
@@ -31,16 +40,15 @@ good world citizen.</li>
 </ol>
 <footer>Citizenship in the World Merit Badge- Troop 2020</footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="4" data-marpit-pagination-total="13" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="5" data-marpit-pagination-total="14" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
 <h2>Citizenship in the World Merit Badge Requirements cont.</h2>
 <ol start="2">
 <li>Explain how one becomes a citizen in the United States, and explain the rights, duties,<br />
-and obligations of U.S. citizenship. Discuss the similarities and differences between the<br />
-rights, duties, and obligations of U.S. citizens and the citizens of two other countries.</li>
+and obligations of U.S. citizenship. Discuss the similarities and differences between the rights, duties, and obligations of U.S. citizens and the citizens of two other countries.</li>
 </ol>
 <footer>Citizenship in the World Merit Badge- Troop 2020</footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="5" data-marpit-pagination-total="13" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="6" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="6" data-marpit-pagination-total="14" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
 <h2>Citizenship in the World Merit Badge Requirements cont.</h2>
 <ol start="3">
 <li>Do the following:<br />
@@ -49,7 +57,7 @@ b. Select a foreign country and discuss with your counselor how its geography, n
 </ol>
 <footer>Citizenship in the World Merit Badge- Troop 2020</footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="6" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="6" data-marpit-pagination-total="13" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="7" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="7" data-marpit-pagination-total="14" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
 <h2>Citizenship in the World Merit Badge Requirements cont.</h2>
 <ol start="4">
 <li>Do TWO of the following:<br />
@@ -58,7 +66,7 @@ a. Explain international law and how it differs from national law. Explain the r
 </ol>
 <footer>Citizenship in the World Merit Badge- Troop 2020</footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="7" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="7" data-marpit-pagination-total="13" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="8" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="8" data-marpit-pagination-total="14" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
 <h2>Citizenship in the World Merit Badge Requirements cont.</h2>
 <ol start="4">
 <li>continued<br />
@@ -75,7 +83,7 @@ a. Explain international law and how it differs from national law. Explain the r
 </ol>
 <footer>Citizenship in the World Merit Badge- Troop 2020</footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="8" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="8" data-marpit-pagination-total="13" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="9" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="9" data-marpit-pagination-total="14" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
 <h2>Citizenship in the World Merit Badge Requirements cont.</h2>
 <ol start="5">
 <li>Do the following:<br />
@@ -85,7 +93,7 @@ c. Show on a world map countries that use each of these five different forms of 
 </ol>
 <footer>Citizenship in the World Merit Badge- Troop 2020</footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="9" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="9" data-marpit-pagination-total="13" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="10" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="10" data-marpit-pagination-total="14" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
 <h2>Citizenship in the World Merit Badge Requirements cont.</h2>
 <ol start="6">
 <li>Do the following:<br />
@@ -100,7 +108,7 @@ c. Explain the purpose of a passport and visa for international travel.</li>
 </ol>
 <footer>Citizenship in the World Merit Badge- Troop 2020</footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="10" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="10" data-marpit-pagination-total="13" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="11" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="11" data-marpit-pagination-total="14" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
 <h2>Citizenship in the World Merit Badge Requirements cont.</h2>
 <ol start="7">
 <li>Do TWO of the following (with your parent’s permission) and share with your counselor what you have learned:<br />
@@ -112,7 +120,7 @@ e. Participate in or attend an international event in your  area, such as an eth
 </ol>
 <footer>Citizenship in the World Merit Badge- Troop 2020</footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="11" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="11" data-marpit-pagination-total="13" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="12" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="12" data-marpit-pagination-total="14" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
 <h2>Session 1 Discussion</h2>
 <ol>
 <li>Explain what citizenship in the world means to you and what you think it takes to be a<br />
@@ -120,7 +128,7 @@ good world citizen.</li>
 </ol>
 <footer>Citizenship in the World Merit Badge- Troop 2020</footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="12" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="12" data-marpit-pagination-total="13" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="13" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="13" data-marpit-pagination-total="14" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
 <h2>Session 1 Discussion</h2>
 <ol start="2">
 <li>Explain how one becomes a citizen in the United States, and explain the rights, duties,<br />
@@ -129,7 +137,7 @@ rights, duties, and obligations of U.S. citizens and the citizens of two other c
 </ol>
 <footer>Citizenship in the World Merit Badge- Troop 2020</footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="13" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="13" data-marpit-pagination-total="13" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="14" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="14" data-marpit-pagination-total="14" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
 <h2>Session 1 Homework</h2>
 <p>Before session 2:</p>
 <p>Perform the following research and learning, be prepared to discuss in session 2.</p>
