--- a/presentation/cit-world.html
+++ b/presentation/cit-world.html
@@ -26,6 +26,7 @@
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="3" data-class="invert" data-footer="Citizenship in the World Merit Badge- Troop 2020" data-paginate="true" data-theme="default" class="invert" data-marpit-pagination="3" data-marpit-pagination-total="14" style="--class:invert;--footer:Citizenship in the World Merit Badge- Troop 2020;--paginate:true;--theme:default;">
 <h2>Expectations</h2>
 <ul>
+<li>Obtain permission from a parent before visiting any online resources.</li>
 <li>You must participate in discussion in order to get credit for completing requirements.</li>
 <li>A discussion on world citizenship is not a political debate, keep politics to a minimum.</li>
 <li>Complete homework prior to session 2 and 3.</li>
